[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.50",
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
coagent = "coagent.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coagent"]
